# tricorn-smart-contracts

casper/: .gitignore  DEPLOYER1ED_secret_key.pem  DEPLOYER2ED_secret_key.pem  README.md  deploy-event-sampl.json
casper/casper-common/: Cargo.toml
casper/casper-common/src/: event.rs  lib.rs
casper/connectors-common/: Cargo.toml
casper/connectors-common/src/: connector_config.rs  error.rs  lib.rs  token_contract_registry.rs
casper/contract-bridge/: .gitignore  Cargo.toml  justfile
casper/contract-bridge-tests/: Cargo.toml
casper/contract-bridge-tests/src/: constants.rs  contract_bridge.wasm  lib.rs  utils.rs
casper/contract-bridge-tests/src/config/: public_key.in  signer_secret_key.in
casper/contract-bridge/src/: commissions.rs  constants.rs  contract.rs  entry_points.rs  error.rs  lib.rs  uref.rs  used_nonces.rs  util.rs
casper/contract-bridge/src/interface/: onchain.rs
casper/contract-util/: Cargo.toml  build.rs
casper/contract-util/src/: erc20.rs  error.rs  event.rs  lib.rs  signatures.rs
casper/util/: .env.example  Cargo.toml  justfile
casper/util/src/: bridgectl.rs  client.rs  client_bridge.rs  client_ext.rs  error.rs  lib.rs  util.rs
ethereum/: .env.example  .gitignore  README.md  hardhat.config.ts  justfile  package-lock.json  package.json
ethereum/contract/: Bridge.sol  SafeERC20.sol  TestERC20.sol
ethereum/contract/abi/: Bridge.abi
ethereum/contracts/: Bridge.sol  Errors.sol  TestERC20.sol  TestToken.sol
ethereum/contracts/signature/: SignatureVerify.sol
ethereum/scripts/: arguments-erc20.js  arguments.js  deploy.ts
ethereum/test/: test.ts  util.ts
ethereum/tests-old/: Cargo.toml  test.ts  util.ts
ethereum/tests-old/src/: lib.rs  util.rs
solana/bridge/: Anchor.toml  Cargo.toml  README.md
solana/bridge/programs-test/: Cargo.toml
solana/bridge/programs-test/src/: lib.rs
solana/bridge/programs-test/src/tests/: happy.rs
solana/bridge/programs-test/src/util/: bridge.rs  client.rs  spl.rs
solana/bridge/programs/bridge/: Cargo.toml
solana/bridge/programs/bridge/src/: consts.rs  definitions.rs  lib.rs  util.rs
solana/bridge/programs/bridge/src/definitions/: accounts.rs  error.rs  events.rs  instructions.rs  signatures.rs  verify.rs
solana/bridge/test-keys/: bridge-program.json
