[package]
name = "contract-bridge-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
casper-contract = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7", default-features = false }
casper-engine-test-support = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7", features = ["test-support"] }
casper-execution-engine = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }
casper-types   = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }

casper-common  = { path = "../casper-common" }
contract-bridge = { path = "../contract-bridge" }
contract-util = { path = "../contract-util" }
