[package]
name = "contract-bridge-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
casper-contract = { git = "ssh://git@github.com/BoostyLabs/casper-node.git", rev = "0246a4ab4874bfce71b5a9591dba20d54c54bd51", default-features = false }
casper-engine-test-support = { git = "ssh://git@github.com/BoostyLabs/casper-node.git", rev = "0246a4ab4874bfce71b5a9591dba20d54c54bd51", features = ["test-support"] }
casper-execution-engine = { git = "ssh://git@github.com/BoostyLabs/casper-node.git", rev = "0246a4ab4874bfce71b5a9591dba20d54c54bd51" }
casper-types   = { git = "ssh://git@github.com/BoostyLabs/casper-node.git", rev = "0246a4ab4874bfce71b5a9591dba20d54c54bd51" }
k256 = { version = "0.10.4", features = ["pem"] }
base16 = { version = "0.2.1", default-features = false }

casper-common  = { path = "../casper-common" }
contract-bridge = { path = "../contract-bridge" }
contract-util = { path = "../contract-util" }
