[package]
name = "contract-util"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["thiserror"]
onchain = ["casper-contract/no-std-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7", default-features = false }
casper-types    = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }

num_enum = { version = "0.5.7", default-features = false }

once_cell = { version = "1.12.0", default-features = false }
thiserror = { version = "1.0.31", optional = true }

[build-dependencies]
cfg_aliases = "0.1.1"
