[package]
name = "casper-util"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
reqwest = { version= "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"

connectors-common = { path = "../connectors-common" }

casper-types   = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }
casper-node    = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }
casper-hashing = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }
casper-execution-engine = { git = "ssh://git@github.com/ElusiveMori/casper-node.git", rev = "06ad2300310587186f16bc4acaef94efcc4fc8f7" }
jsonrpc-lite   = "0.5"

dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.1", features = ["derive"] }
envy = "0.4"
regex = "1.5"
once_cell = "1.11"
base64 = "0.13"
toml = "0.5"

serde = "1"
serde_json = "1"
arc-swap = "1.5.0"
base16 = "0.2.1"
bincode = "1.3.3"

[profile.dev.package."*"]
debug = false

[profile.dev.package]
casper-node             = { debug = false, opt-level = 2 }
casper-hashing          = { debug = false, opt-level = 2 }
casper-types            = { debug = false, opt-level = 2 }
casper-execution-engine = { debug = false, opt-level = 2 }
