[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ethers = "0.13.0"
serde = "1.0.138"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
