[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.26.0"
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
tokio = "1.24.2"
base64 = "0.21.0"
bs58 = "0.4.0"
data-encoding-macro = "0.1.12"
anyhow = "1.0.68"
once_cell = "1.17.0"
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
log = "0.4.17"

bridge = { path = "../programs/bridge" }
rand = "0.8.5"
solana-transaction-status = "1.14.13"

